--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -37,4 +37,4 @@
       %div.control-group
         %div.controls
         = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;"
-        = link_to "Cancel", profile_path(current_user.username), class: "button button-standard", style: "float: right;"
+        = link_to "Cancel", profile_path(@user.username), class: "button button-standard", style: "float: right;"
