--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -46,7 +46,7 @@
               %li.CR_dropdown_option
                 = link_to "View all details", submission_drilldown_path(post.submitted_answer.id)         
     
-    %div#cr_pop.CRarea{ data: { content: post.content }}
+    %div#cr_pop.CRarea
       - if post.task.text?
         - if post.content && post.content.downcase.include?("<html>")
           %div.onhover{ style: "width: 100%; text-align: right; opacity: 0.7; padding: 3px; background-color: white; display: none; position: absolute; float: right; z-index: 2; font-size: 15px; margin-top: 5px;" }
@@ -69,7 +69,7 @@
           %div.content
             %code.content= post.content
           - if post.image_url.blank?
-            = image_tag ICON_CHECK_URL, alt: "Image placeholder", class: "preview_image", style:"height:auto; width:190px; margin-top:10px; z-index: 500;"
+            = image_tag ICON_CHECK_URL, alt: "Image placeholder", class: "preview_image", style:"height:auto; width:70px; margin-top:10px; z-index: 500;"
           - else
             = image_tag post.image_url, alt: "Image content", class: "preview_image", style:"height:auto; z-index: 500; #{'opacity:0.5' unless post.content.blank?}"
           %div.details
@@ -80,7 +80,7 @@
                 = truncate(post.title, length: 75)
             - unless post.description.blank?
               %h5.description{ style: "margin-bottom:2px; "}= truncate(post.description, length: 85)
-            - unless post.url.nil?
+            - unless post.url.blank?
               %h5{ style: "margin-top:0" }= link_to truncate(post.url, length:85), post.url            
     
     - unless post.caption.blank?
