--- a/app/views/sections/_intro.html.haml
+++ b/app/views/sections/_intro.html.haml
@@ -1,11 +1,9 @@
 .intro_wrapper
   .intro
     :javascript
-      $(function(){
-        $("#nextbutton").on("ajax:success", function(xhr, data){
-          $(".intcontainer").fadeOut('slow', function(){
-            $(this).replaceWith(data).fadeIn();
-          });
+      $("#nextbutton").on("ajax:success", function(xhr, data){
+        $(".intro_wrapper").fadeOut('slow', function(){
+          $(this).replaceWith(data).fadeIn();
         });
       });
     .header
