--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -208,6 +208,8 @@ code.content { color: #404040; display: block; padding: 10px; font-size: 13px; l
 .counterbox{border:1px solid rgba(0, 0, 0, .1); background-color:white; border-radius:4px; padding: 7px 7px 0;}
 .messagespace{margin:12px 9px 0 37px; font-size:15px; word-wrap:normal; width:240px; font-weight:bold;}
 
+/* Take/Revolution */
+
 .CRquizspace {background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:12px; min-height:300px;}
 .label.notice {font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
 #CRprogressbar {width:632px; height: 40px; margin: 0 auto;}
@@ -222,6 +224,11 @@ code.content { color: #404040; display: block; padding: 10px; font-size: 13px; l
 .task_proof_options span { text-transform:uppercase; color: #0088cc; font-weight:bold; cursor:pointer; }
 #report_issue_modal.modal.fade {  background-color: transparent; border: 0; box-shadow: 0 0 0; }
 .explorebody .radio{padding-left:35px;}
+#answer_preview .image_preview { height: 200px;  width: inherit; max-width: inherit; }
+.CRquestionspace { width: 46%; margin-right: 1%; }
+.CRresponsespace { width: 50%; }
+.add_caption .text { font-size: 14px; cursor: pointer; vertical-align: top; }
+.add_caption .caret { border-top-color: #0088cc; border-bottom-color: #0088cc; vertical-align: bottom; }
 
 #topsection { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:12px; }
 .headerspace { text-shadow: 0 1px 0 white; padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; background-color: #FCFCFC;}
