--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -210,22 +210,21 @@ code.content { color: #404040; display: block; padding: 10px; font-size: 13px; l
 
 /* Take/Revolution */
 
-.CRquizspace {background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:12px; min-height:300px;}
-.label.notice {font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
-#CRprogressbar {width:632px; height: 40px; margin: 0 auto;}
-.CRquestionspace {width:40%; display:inline-block; padding-top:9px;}
-.cr_question_header {font:bold 15px 'MuliRegular', sans-serif;}
-.CRquestion {font-size:15px; padding: 0; margin: 10px 5px 0 0; word-break: normal; background-color: white; border: none; font: normal 18px 'MuliRegular', sans-serif;} 
-.CRresponsespace {display:inline-block;background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'MuliRegular', sans-serif;width:56.5%;}
+.CRquizspace { background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:12px; min-height:300px;}
+.label.notice { font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
+#CRprogressbar { width:632px; height: 40px; margin: 0 auto;}
+.CRquestionspace { width: 46%; display:inline-block; padding-top:9px; margin-right: 1%;}
+.cr_question_header { font:bold 15px 'MuliRegular', sans-serif;}
+.CRquestion { font-size:15px; padding: 0; margin: 10px 5px 0 0; word-break: normal; background-color: white; border: none; font: normal 18px 'MuliRegular', sans-serif;} 
+.CRresponsespace { display:inline-block; background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'MuliRegular', sans-serif;width:56.5%;}
 .CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
-.CRbuttonspace {margin-top:12px; }
-.input input{background-color: #F9F9F9;}
+.CRbuttonspace { margin-top:12px; }
+.input input{ background-color: #F9F9F9;}
 .task_proof_options { font-size: 12px; text-align:center; margin:15px auto 0 auto; width: 258px; }
 .task_proof_options span { text-transform:uppercase; color: #0088cc; font-weight:bold; cursor:pointer; }
 #report_issue_modal.modal.fade {  background-color: transparent; border: 0; box-shadow: 0 0 0; }
-.explorebody .radio{padding-left:35px;}
+.explorebody .radio{ padding-left:35px;}
 #answer_preview .image_preview { height: 200px;  width: inherit; max-width: inherit; }
-.CRquestionspace { width: 46%; margin-right: 1%; }
 .CRresponsespace { width: 50%; }
 .add_caption .text { font-size: 14px; cursor: pointer; vertical-align: top; }
 .add_caption .caret { border-top-color: #0088cc; border-bottom-color: #0088cc; vertical-align: bottom; }
