--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -7,16 +7,16 @@
       %div{ style: "display:inline-block;" }
         %span <strong>#{@section.path.name}:</strong> #{@section.name}</span>
         %div#idprogressbar
-    %div.completionmessagespace{ style: "display:none;"}
+    %div.completionmessagespace
       %div.completionheader
-        %span Congratulations!
-      %div.completionsubheader You just scored <strong>#{@section.points_earned(current_user)} points</strong> in this section!
+        %span Nice work!
+      %div.completionsubheader You just earned <strong>#{@section.points_earned(current_user)} points</strong> in this section!
       %div.completionstats
         %p Total Challenge points: <strong>#{@enrollment.total_points}</strong>
         %p Current level: <strong>#{@enrollment.level}</strong>
       %div{ style: "float: right; margin: 15px 10px 0 0;" }
         = render "shared/sharing", { custom_style: "", title: "Just finished a section of the #{@path.name} challenge on @MetaBright and scored #{@enrollment.total_points} points", url: challenge_url(@section.path.permalink) }
-    %div{ style: "display:none; vertical-align:top;" }
+    %div{ style: "display:inline-block; vertical-align:top;" }
       %div.completionnextsteps
         %span Continue improving your score
         %ul
